--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "miragejs": "^0.1.35",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^8.0.2",
     "react-scripts": "3.4.3",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "seedrandom": "^3.0.5"
   },
   "scripts": {
